@@ -1,3 +1,8 @@
+2001-10-12 12:44 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
+   * source/rdd/dbfcdx/dbfcdx1.c
+     ! fixed updating keys with trailing spaces
+     * added support for conditional indexes (creation and updating)
+
 2001-10-11 23:05 GMT+1 JFL (mafact) <jfl@mafact.com>
    * harbour/source/vm/classes.c
    * harbour/source/vm/hvm.c
